fix(index.css): hid overflow in body

--- a/frontend/src/css/home.module.css
+++ b/frontend/src/css/home.module.css
@@ -96,7 +96,6 @@
     z-index: 0;
     top: -79px;
     position: absolute;
-    overflow: hidden;
     width: 111%;
     height: 111%;
 }
