--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased !important;
 }
 
